--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -1,153 +1,140 @@
-
 body {
     margin: 0;
     padding: 0;
 	background-color:#f9ffff;
     overflow-x: hidden;	
 }
-nav{
-
-    position: relative;
-    width: 40%;
-    border-radius: 8px;
-    font-size: 0;
-	margin-right:0;
-	margin-top:6px;
-    padding: 0;
-	
-}
-.container{
-    width: 100%;
-	padding:3%;
-    border-radius: 10%;
-    background:#c0e4e4;
-}
-
-.header-block
-{
-  height: 18%;
-  border: 0px;
-  margin-right:0;
-  margin-left:0;
-  padding-left:10%;
-}
-a{
-	padding-right:110px;
-}
-nav a {
-    font-size: 15px;
-    display:inline;
-    position: relative;
-    z-index: 1;
-    text-decoration: none;
-    text-transform: uppercase;
-    text-align: center;
-    color: white;
-    cursor: pointer;
-}
-nav a:hover{
-	text-decoration: none;
-}
-nav .animation {
-    position: absolute;
-    height: 100%;
-    top: 0;
-    z-index: 0;
-    transition: all .5s ease 0s;
-    border-radius: 8px;
-}
-a:nth-child(1) {
-    width: 20%;
-}
- a:nth-child(2) {
-    width: 20%;
-}
-nav a:nth-child(1):hover~.animation {
-    width: 15%;
-    left: 17%;
-    background-color: #c0e4e4;
-}
-nav a:nth-child(2):hover~.animation {
-    width: 15%;
-    left: 41%;
-    background-color: #c0e4e4;
+.title{
+    font-size: 20px; 
+    color:white;
 }
 .header 
 {
    width: 100%;
    height: 15%;
 }
-.header-block{
-  padding-left:10%;
-  height: 18%;
+.menu{
+   
+    border-radius: 2%;
+   
+}
+.menu-item{
+    padding-left: 5%;
+}
+.form-group{
+    width: 40%;
+    margin: 0 auto;
+    border-radius: 10%;
+    background:#c0e4e4;
+}
+  .content-menu .menu-item a {
+    position: relative;
+    z-index: 1;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+    color:white;
+    font-size: 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: 0.5s;
+  }
+  .content-menu .menu-item a:hover {
+    color: #fff;
+  }
+  .content-menu .menu-item a:hover::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    background: #258fd6;
+    transition: 0.5s;
+    animation: animate .5s linear forwards; 
+  }
+  @keyframes animate {
+    0% {
+      top: calc(50% - 2px);
+      left: -100%;
+      height: 4px;
+      z-index: 1;
+    }
+    50% {
+      top: calc(50% - 2px);
+      left: 0;
+      height: 4px;
+      z-index: 1;
+    }
+    100% {
+      top: 0;
+      left: 0;
+      height: 100%;
+      z-index: -1;
+    }
+  }
+  .menu .animation {
+    position: absolute;
+    height: 100%;
+    transition: all .5s ease 0s;
+    border-radius: 8px;
 }
 .row
 {
     position: relative;
     background-color: #20b1aa;
-    padding: 1.5%;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+    padding-left:2.5%;
+
 	height: 15%;
-}
-.col-xs-4
-{
-    position: relative;
-	left: 15%;
-    font-size: 28px;	
-}
-.col-md-4{
-	position: relative;
-    padding-left:15%;
-	padding-right:0;
-	margin-top:10px;
-}
-
-.btn-group{
-    padding-right: 2%;
-}
-
-.text_block {
-padding: 95px 0;
-color: #000;
-margin-top:50px;
-display: block;
-margin: 0px auto;
-}
-
-.text_block h4{
-	font-family: "RalewayBold", sans-serif;
-	color: #000;
-	text-align: center;
-}
-.text_blockp{
-	font-size: 14px;
-	padding: 10px 0px;
-	margin-right: 30px;
-}
-h1{
-	font-family: "RalewayBold", sans-serif;
 }
 .headline{
 	position: relative;
-	width: 100%;
-	margin-top: 5%;
+    margin-top: 5%;
+    margin-right: 5%;
 	margin-bottom:5%;
-	
 }
 .form
 {
+    padding-top: 5%;
 	position: relative;
     display: flex;
     justify-content: center; 	
 }
-.fieldset
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.6);
+    z-index: 1000;
+}
+.modal .modal_content {
+    border-radius:22%;
+    background:#c0e4e4;
+    margin: 25% auto;
+    border-radius: 1px solid #888;
+    width: 40%;
+    height: 40%;
+    z-index: 99999;
+}
+.modal .modal_content .close_modal_window {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.form-control
 {
-	border-radius: 10%;
-	border-color: #000;
-	width: 50%;
+
+    width: 50%;
+    padding-top: 5%;
 	position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: center; 	
 }
+
 
 
 
