--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -8,16 +8,26 @@
     </head>
     <body>
         <div class="row">
-            <div class="col-xs-12 col-md-8">INSHORT</div>
-            <div class="btn-group col-xs-6 col-md-4" role="group" aria-label="...">
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-success">Войти</button>
-                </div>
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-info">Регістрація  </button>
-                </div>
+            <div class="col-6 col-md-4 title">
+                inSHORT
             </div>
-    </div>
+                <div class="col-6 col-md-6">
+              <div class="content-menu">
+                <div class="col-6 col-md-4 menu-item"><a href="#">Home</a></div>
+                <div  class="col-6 col-md-4 menu-item"><a href="#">FAQ</a></div>
+              </div>
+              <div class="animation"></div>
+            </div>	
+            <div class="header-block btn-group col-6 col-md-2"  role="group" aria-label="...">
+              <div class="btn-group" role="group">
+                <button type="button" class="btn btn-success">Увійти</button>
+              </div>
+              <div class="btn-group" role="group">
+                <button type="button" class="btn btn-info">Реєтрація </button>
+              </div>
+            </div>
+        
+        </div>
         <div class="row registrate">
             <h3 class="text-center ">Регістрація</h3>
            <div >
