--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="{% static "css/style.css" %}" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <script href="{% static "script/script.js" %}"></script>
+        <script src="{% static 'script/jquery.js' %}" defer></script>
+        <script src="{% static 'script/menu.js' %}" defer></script>
     </head>
 <title>inShort</title>
 </head>
@@ -70,6 +71,9 @@
           </div>
       </form>
     </div>
+  </div>
+  <div id="urls_container">
+
   </div>
 </body>
 </html>
