--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -3,16 +3,18 @@
 <html lang="ru">
     {% load static %}    
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
         <link rel="stylesheet" href="{% static "css/reg.css" %}" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
 <body>
-    <div class="row">
+    <div class="row head">
         <div class="col-6 col-md-4 title">
             inSHORT
         </div>
-            <div class="col-6 col-md-6">
+        <div class="col-6 col-md-6">
           <div class="content-menu">
             <div class="col-6 col-md-4 menu-item"><a href="#">Home</a></div>
             <div  class="col-6 col-md-4 menu-item"><a href="#">FAQ</a></div>
@@ -27,7 +29,6 @@
             <button type="button" class="btn btn-info">Реєтрація </button>
           </div>
         </div>
-    
     </div>
     <div class="row registrate">
         <h3 class="text-center ">Войти</h3>
@@ -51,9 +52,10 @@
                     </div>
                 </div>
                 <div class="text-center col-xs-12 container">
-                    <button class="btn btn-facebook"  > Facebook</button>
+                    <a  href="" class="btn btn-facebook">Facebook</a>
+                   
                     <button type="submit" class="btn btn-success">Зайти</button>
-                    <button  class=" btn btn-twitter"  >Google</button>
+                    <a  href="" class=" btn btn-twitter">Google</a>
                 </div>
             </form>
         </div>
