--- a/home/static/css/reg.css
+++ b/home/static/css/reg.css
@@ -1,105 +1,84 @@
-body{
-    margin: 0;
-    padding: 0;
-    overflow:  hidden;
-}
-
 body {
-    margin: 0;
-    padding: 0;
-	background-color:#f9ffff;
-    overflow-x: hidden;	
+  margin: 0;
+  padding: 0;
+background-color:#f9ffff;
+  overflow-x: hidden;	
 }
 .title{
-    font-size: 20px; 
-    color:white;
+  font-size: 20px; 
+  color:white;
 }
-.header 
-{
-   width: 100%;
-   height: 15%;
+.head{
+background-color: #20b1aa;
+position: relative;
+padding-top: 2.5%;
+padding-bottom: 2.5%;
+padding-left:2.5%;
+
+height: 15%;
 }
 .menu{
-   
-    border-radius: 2%;
-   
+  border-radius: 2%;
 }
 .menu-item{
-    padding-left: 5%;
+  padding-left: 5%;
 }
 .form-group{
-    width: 40%;
-    margin: 0 auto;
-    border-radius: 10%;
-    background:#c0e4e4;
+  width: 40%;
+  margin: 0 auto;
+  border-radius: 10%;
+  background:#c0e4e4;
 }
-  .content-menu .menu-item a {
-    position: relative;
+.content-menu .menu-item a {
+  position: relative;
+  z-index: 1;
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  cursor: pointer;
+  color:white;
+  font-size: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: 0.5s;
+}
+.content-menu .menu-item a:hover {
+  color: #fff;
+}
+.content-menu .menu-item a:hover::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  background: #258fd6;
+  transition: 0.5s;
+  animation: animate .5s linear forwards; 
+}
+@keyframes animate {
+  0% {
+    top: calc(50% - 2px);
+    left: -100%;
+    height: 4px;
     z-index: 1;
-    text-transform: uppercase;
-    text-align: center;
-    color: white;
-    cursor: pointer;
-    color:white;
-    font-size: 20px;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: 0.5s;
   }
-  .content-menu .menu-item a:hover {
-    color: #fff;
+  50% {
+    top: calc(50% - 2px);
+    left: 0;
+    height: 4px;
+    z-index: 1;
   }
-  .content-menu .menu-item a:hover::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    background: #258fd6;
-    transition: 0.5s;
-    animation: animate .5s linear forwards; 
-  }
-  @keyframes animate {
-    0% {
-      top: calc(50% - 2px);
-      left: -100%;
-      height: 4px;
-      z-index: 1;
-    }
-    50% {
-      top: calc(50% - 2px);
-      left: 0;
-      height: 4px;
-      z-index: 1;
-    }
-    100% {
-      top: 0;
-      left: 0;
-      height: 100%;
-      z-index: -1;
-    }
-  }
-  .menu .animation {
-    position: absolute;
+  100% {
+    top: 0;
+    left: 0;
     height: 100%;
-    transition: all .5s ease 0s;
-    border-radius: 8px;
+    z-index: -1;
+  }
 }
-.row
-{
-    position: relative;
-    background-color: #20b1aa;
-    padding-top: 2.5%;
-    padding-bottom: 2.5%;
-    padding-left:2.5%;
-
-	height: 15%;
+.menu .animation {
+  position: absolute;
+  height: 100%;
+  transition: all .5s ease 0s;
+  border-radius: 8px;
 }
-.headline{
-	position: relative;
-    margin-top: 5%;
-    margin-right: 5%;
-	margin-bottom:5%;
-}
-
 .col-xs-6
 {
     position: absolute;
@@ -108,10 +87,7 @@ body {
 .btn-group{
     padding-right: 2%;
 }
-#header .menulist{
- margin: 0;
-    padding: 4px;
-}
+
 .container{
     width: 100%;
 }
@@ -127,7 +103,7 @@ body {
    }
    .main-form{
     
-       position: absolute;
+    position: absolute;
     margin-top: 30px;
     margin: 0 auto;
     max-width: 400px;
@@ -154,13 +130,10 @@ body {
    .btn-default{
        background-color:green;
    }
-   h3.text-center{
-       padding-top: 2%;
-       padding-bottom: 1%;
-   }
+  
    .btn-facebook {background-color: #4267b2;width:30%;color: #fff;}
 .btn-facebook:hover {background-color: #365899; color: #fff;}
  
 .btn-twitter {background-color: #1da1f2;width:30%;color: #fff;}
-.btn-twitter {background-color: #1a91da; color: #fff;}
+.btn-twitter {background-color: #da671a; color: #fff;}
  
