--- a/home/templates/FAQ.html
+++ b/home/templates/FAQ.html
@@ -2,6 +2,8 @@
 <head>
     {% load static %}    
     <head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
         <link rel="stylesheet" href="{% static "css/faq.css" %}" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -10,7 +12,7 @@
 <title>inShort</title>
 </head>
 <body>
-	<div class="row">
+	<div class="row head">
 		<div class="col-6 col-md-4 title">
 			inSHORT
 		</div>
