--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -2,6 +2,8 @@
 <head>
     {% load static %}    
     <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta charset="utf-8">
         <link rel="stylesheet" href="{% static "css/style.css" %}" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -73,6 +75,7 @@
       </form>
     </div>
   </div>
+ 
   <ul class="accordion-menu">
     <li>
       <div class="col-6 col-md-3">
@@ -99,7 +102,7 @@
         goooogle.com12 
       </div>
       <div class="col-6 col-md-3">
-         googl.
+        => googl.
        </div>
       <div class="col-6 col-md-2">
        меньше місяця
@@ -112,7 +115,6 @@
           5
         </div>
       </div>  
-    </div>
       <ul class="submenuItems">
           <div class="row title">
             <div class="col-6 col-md-3">
@@ -137,11 +139,53 @@
           
         </div>
       </ul>
-      </li>    
+      </li>
+      <li>
+        <div class="col-6 col-md-3">
+          goooogle.com12 
+        </div>
+        <div class="col-6 col-md-3">
+          => googl.
+         </div>
+        <div class="col-6 col-md-2">
+         меньше місяця
+        </div>
+        <div class="col-6 col-md-2">
+         <a>Copy </a>
+        </div>
+        <div class="dropdownlink row" >
+          <div class="col-6 col-md-2">
+            5
+          </div>
+        </div>  
+        <ul class="submenuItems">
+            <div class="row title">
+              <div class="col-6 col-md-3">
+              Время
+              </div><div class="col-6 col-md-3">
+               IP
+              </div><div class="col-6 col-md-3">
+                Город
+              </div><div class="col-6 col-md-3">
+                Страна
+              </div>
+              <div class="row title">
+                <div class="col-6 col-md-3">
+                04.03.2000
+                </div><div class="col-6 col-md-3">
+                 вичислю
+                </div><div class="col-6 col-md-3">
+                  Запорожжя
+                </div><div class="col-6 col-md-3">
+                  Не Україна
+                </div>
+            
+          </div>
+        </ul>
+        </li>     
   </ul>
-  <div id="urls_container">
-
-  </div>
- 
+</p>
+  {tyt}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
 </html>
