--- a/custom_urls/templates/urls/user_urls.html
+++ b/custom_urls/templates/urls/user_urls.html
@@ -12,9 +12,6 @@
         <div class="col-6 col-md-2">
             клацні
         </div>
-        <div class="col-6 col-md-2">
-            клацні
-        </div>
         <div class="dropdownlink row">
             <div class="col-6 col-md-2">
                 Переходи
@@ -26,7 +23,7 @@
     <li>
         
         <div class="col-6 col-md-2">
-            {{ url.source_url }}
+            {{ url.long_url }}
         </div>
         <div class="col-6 col-md-2">
             => {{ url.short_url }}
@@ -36,9 +33,6 @@
         </div>
         <div class="col-6 col-md-2">
             <a>Copy </a>
-        </div>
-        <div class="col-6 col-md-2">
-            <a> Qr-Code </a>
         </div>
         <div class="dropdownlink row">
             <div class="col-6 col-md-2">
