--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -101,14 +101,14 @@
       <div class="col-6 col-md-3">
         goooogle.com12 
       </div>
-      <div class="col-6 col-md-3">
+      <div class="col-6 col-md-3 value">
         => googl.
        </div>
       <div class="col-6 col-md-2">
        меньше місяця
       </div>
       <div class="col-6 col-md-2">
-       <a>Copy </a>
+       <a type="button" class="copy" >Copy </a>
       </div>
       <div class="dropdownlink row" >
         <div class="col-6 col-md-2">
@@ -151,7 +151,7 @@
          меньше місяця
         </div>
         <div class="col-6 col-md-2">
-         <a>Copy </a>
+         <a class="copy">Copy </a>
         </div>
         <div class="dropdownlink row" >
           <div class="col-6 col-md-2">
@@ -179,13 +179,11 @@
                 </div><div class="col-6 col-md-3">
                   Не Україна
                 </div>
-            
           </div>
         </ul>
         </li>     
   </ul>
 </p>
-  {tyt}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+</div>
 </body>
 </html>
